<package format="3">
  <name>gstreamer_image_transport_interfaces</name>
  <version>0.0.0</version>
  <description>GStreamer plugins for image_transport (interface package).</description>
  <author>Kye Morton</author>
  <maintainer email="pryre.dev@outlook.com">Kye Morton</maintainer>
  <license>Mozilla Public License 2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
